--- a/src/app/page/perfil/perfil.component.html
+++ b/src/app/page/perfil/perfil.component.html
@@ -1,12 +1,12 @@
-<div class="min-h-screen flex flex-col bg-gray-100">
-  <!-- Encabezado -->
-  <header class="w-full bg-[#F0F4EF] flex flex-wrap items-center p-4 shadow">
+<section class="min-h-[calc(100vh-8rem)] py-16 px-4 sm:px-6 lg:px-8 relative" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4)), url('../../../../assets/puntosafa_fondo3.jpeg'); background-size: cover; background-position: center;">
+<!-- Encabezado -->
+  <div class="w-full bg-[#F0F4EF] flex flex-wrap items-center p-4 shadow relative z-10">
     <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-24 h-auto md:w-40 ml-4">
     <h2 class="flex-grow text-center text-lg md:text-2xl font-bold text-[#1F2D3D]">
       Bienvenido a PuntoSafa
     </h2>
     <h1 class="text-lg md:text-2xl font-bold text-blue-600 mr-4 md:mr-10">¡HOLA! {{ userData?.nombre }}</h1>
-  </header>
+  </div>
 
   <!-- Contenido principal -->
   <main class="flex-grow container mx-auto p-4 md:p-6 bg-white shadow-lg rounded-lg mt-4 md:mt-6">
@@ -107,10 +107,6 @@
       </div>
     </div>
 
-    <!-- Información del Carrito de Compras -->
-    <div class="mt-6 bg-gray-100 p-4 rounded-lg shadow-md">
-      <h2 class="text-lg font-semibold text-gray-700 mb-2">Carrito de Compras</h2>
-      <p class="text-gray-600">Aquí se muestra la información del carrito de compras...</p>
-    </div>
+
   </main>
-</div>
+</section>
