--- a/src/app/page/perfil/perfil.component.html
+++ b/src/app/page/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<section class="min-h-[calc(100vh-8rem)] py-16 px-4 sm:px-6 lg:px-8 relative" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4)), url('../../../../assets/puntosafa_fondo3.jpeg'); background-size: cover; background-position: center;">
+<section class="min-h-[calc(100vh-8rem)] py-16 px-4 sm:px-6 lg:px-8 " style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4)), url('../../../../assets/puntosafa_fondo3.jpeg'); background-size: cover; background-position: center;">
 <!-- Encabezado -->
   <div class="w-full bg-[#F0F4EF] flex flex-wrap items-center p-4 shadow relative z-10">
     <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-24 h-auto md:w-40 ml-4">
@@ -46,11 +46,11 @@
         </div>
 
         <div class="mt-4 flex flex-wrap gap-4">
-          <button (click)="abrirFormulario()" class="bg-blue-500 text-white text-sm md:text-lg px-4 py-2 rounded shadow-md w-full md:w-auto">
+          <button (click)="abrirFormulario()" class="bg-blue-900 text-white px-6 py-2 rounded hover:bg-gray-400">
             Editar Perfil
           </button>
 
-          <button (click)="abrirEdicionUsuario()" class="bg-blue-500 text-white text-sm md:text-lg px-4 py-2 rounded shadow-md w-full md:w-auto">
+          <button (click)="abrirEdicionUsuario()" class="bg-blue-900 text-white px-6 py-2 rounded hover:bg-gray-400">
             Editar Contraseña
           </button>
         </div>
@@ -58,7 +58,7 @@
     </div> <!-- Fin del flex principal -->
 
     <!-- Modal de Edición de Perfil -->
-    <div *ngIf="mostrandoFormulario" class="fixed inset-0 bg-gray-900 bg-opacity-50 flex justify-center items-center p-4">
+    <div *ngIf="mostrandoFormulario" class=" z-50 fixed inset-0 bg-gray-900 bg-opacity-50 flex justify-center items-center p-4">
       <div class="bg-white p-4 md:p-6 rounded shadow-lg w-full md:w-1/3">
         <h2 class="text-lg font-semibold mb-4">Editar Perfil</h2>
 
@@ -90,8 +90,8 @@
     </div>
 
     <!-- Modal de Edición de Contraseña -->
-    <div *ngIf="mostrandoEdicionContrasena" class="fixed inset-0 bg-gray-900 bg-opacity-50 flex justify-center items-center p-4">
-      <div class="bg-white p-4 md:p-6 rounded shadow-lg w-full md:w-1/3">
+    <div *ngIf="mostrandoEdicionContrasena" class=" z-50 fixed inset-0 bg-gray-900 bg-opacity-50 flex justify-center items-center p-4">
+      <div class="bg-white p-4 md:p-6 rounded shadow-lg w-full md:w-1/3 ">
         <h2 class="text-lg font-semibold mb-4">Editar Email y Contraseña</h2>
 
         <label>Contraseña:</label>
