--- a/src/app/page/perfil-adm/perfil-adm.component.html
+++ b/src/app/page/perfil-adm/perfil-adm.component.html
@@ -92,8 +92,41 @@
     <!-- Información del Carrito de Compras -->
     <div class="mt-8 bg-gray-100 p-4 rounded-lg shadow-md">
       <h2 class="text-lg font-semibold text-gray-700 mb-2">Estado de Clientes</h2>
-      <p class="text-gray-600">Aquí se muestra el estado de la compra de los Clientes...</p>
-    </div>
 
+
+      <div class="overflow-x-auto">
+        <table class="w-full border-collapse border border-gray-200 rounded-lg shadow-md">
+          <thead class="bg-gray-200">
+          <tr>
+            <th class="border p-2">Estado</th>
+            <th class="border p-2">Dirección de Entrega</th>
+            <th class="border p-2">Cliente</th>
+            <th class="border p-2">Fecha</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let pedido of pedidos" class="odd:bg-white even:bg-gray-100 hover:bg-gray-200">
+            <td class="border p-2">{{ pedido.estado }}</td>
+            <td class="border p-2">{{ pedido.direccion_entrega }}</td>
+            <td class="px-4 py-2">
+              <ng-container *ngIf="isCliente(pedido.cliente)">
+                {{ pedido.cliente.nombre }} {{ pedido.cliente.apellidos }} <!-- Client Name -->
+              </ng-container>
+            </td>
+            <td class="border p-2">{{ pedido.fecha | date:'yyyy-MM-dd HH:mm' }}</td>
+            <td class="px-4 py-2">
+              <!-- Dropdown or button to update the estado -->
+              <button (click)="updatePedidoEstado(pedido.id, 'enviado')">Mark as Enviado</button>
+              <button (click)="updatePedidoEstado(pedido.id, 'entregado')">Mark as Entregado</button>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+
+
+
+    </div>
   </main>
 </div>
