--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -45,7 +45,7 @@
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
         <div class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
           <label *ngFor="let category of categories">
-            <input type="checkbox" [checked]="selectedCategoryId === category.id" name="category" (change)="filterByCategory(category.id)">
+            <input type="radio" [checked]="selectedCategoryId === category.id" name="category" (change)="filterByCategory(category.id)">
             {{ category.nombre }}
           </label>
         </div>
@@ -57,13 +57,18 @@
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
         <div class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
           <label *ngFor="let range of priceRanges">
-            <input type="checkbox" [checked]="selectedPriceRanges.includes(range.value)" name="priceRange" (change)="filterByPrice(range.value)">
+            <input
+              type="radio"
+              [checked]="selectedPriceRanges.includes(range.value)"
+              name="priceRange"
+              (change)="filterByPrice(range.value)"
+            >
             {{ range.label }}
           </label>
         </div>
       </div>
       <div class="flex justify-center my-4">
-        <button (click)="clearFilters()" class="px-4 py-2 bg-red-500 text-white rounded-md">
+        <button (click)="clearFilters()" class="px-4 py-2 bg-gray-500 text-white rounded-md hover:bg-gray-400">
           Limpiar filtros
         </button>
       </div>
